--- a/gallery.html
+++ b/gallery.html
@@ -84,11 +84,11 @@
 
 <div id="galley" style="margin: 5%;"
 >
-<img src="/chaprt/images/back3.jpg" width="30%"height='35%' style="margin: 1%;">
-<img src="/chaprt/images/back2.jpg"width="30%"height='35%' style="margin: 1%;">
-<img src="/chaprt/images/back1.jpg"width="30%"height='35%' style="margin: 1%;">
-<img src="/chaprt/images/590x3000.jpg"width="62.5%"height='70%' style="margin: 1%;">
-<img src="/chaprt/images/best-italian-food-sydney1.jpg"width="30%"height='70%' style="margin: 1%;">
+<img src="images/back3.jpg" width="30%"height='35%' style="margin: 1%;">
+<img src="images/back2.jpg"width="30%"height='35%' style="margin: 1%;">
+<img src="images/back1.jpg"width="30%"height='35%' style="margin: 1%;">
+<img src="images/590x3000.jpg"width="62.5%"height='70%' style="margin: 1%;">
+<img src="images/best-italian-food-sydney1.jpg"width="30%"height='70%' style="margin: 1%;">
 <img src="/chaprt/images/big3.jpg"width="30%"height='35%' style="margin: 1%;">
 <img src="/chaprt/images/big4.jpg"width="30%"height='35%' style="margin: 1%;">
 <img src="/chaprt/images/brakfast.jpg"width="30%"height='35%' style="margin: 1%;">
